raw/NAILUL MURODZ MUHAMMAD 6400 245150201111033/2024-11-14-08-38-34.ceg/compilation.txt
NT.java:16: error: cannot find symbol
        Main main = new Main();
        ^
  symbol:   class Main
  location: class NT
NT.java:16: error: cannot find symbol
        Main main = new Main();
                        ^
  symbol:   class Main
  location: class NT
2 errors
Not compiled
